--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,14 @@
 limit_conn_zone $server_name zone=servers:10m;
 
 server {
-  listen 443 ssl;
-  server_name ohif.kheops.online;
+    listen 80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl http2;
+  server_name ${SERVER_NAME};
 
   limit_conn servers 1000;
 
