--- a/default.conf
+++ b/default.conf
@@ -2,6 +2,7 @@ limit_conn_zone $server_name zone=servers:10m;
 
 server {
     listen 80 default_server;
+    server_tokens off;
     server_name _;
     return 301 https://$host$request_uri;
 }
@@ -9,6 +10,16 @@ server {
 server {
   listen 443 ssl http2;
   server_name ${SERVER_NAME};
+
+  gzip on;
+  gzip_disable "msie6";
+  gzip_vary on;
+  gzip_comp_level 6;
+  gzip_min_length 1000;
+  gzip_proxied any;
+  gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+
+  server_tokens off;
 
   limit_conn servers 1000;
 
@@ -19,8 +30,6 @@ server {
   ssl_protocols  TLSv1.2 TLSv1.3;
   ssl_ciphers TLS13-AES-256-GCM-SHA384:TLS13-AES-128-GCM-SHA256:TLS13-AES-128-CCM-8-SHA256:TLS13-AES-128-CCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-CCM:ECDHE-ECDSA-AES256-CCM:ECDHE-ECDSA-AES128-CCM8:ECDHE-ECDSA-AES256-CCM8:ECDHE-ECDSA-AES128-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA38:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-CCM:DHE-RSA-AES256-CCM:DHE-RSA-AES128-CCM8:DHE-RSA-AES256-CCM8:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA256;
   ssl_prefer_server_ciphers on;
-
-  proxy_http_version 1.1;
 
   access_log            /var/log/nginx/access.log main;
   error_log             /var/log/nginx/error.log warn;
