--- a/default.conf
+++ b/default.conf
@@ -17,7 +17,7 @@ server {
   gzip_comp_level 6;
   gzip_min_length 1000;
   gzip_proxied any;
-  gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+  gzip_types text/plain text/css text/xml text/javascript application/javascript application/x-javascript application/xml;
 
   server_tokens off;
 
